--- a/src/layout/SigningStatusPanel/SigningStatusPanel.module.css
+++ b/src/layout/SigningStatusPanel/SigningStatusPanel.module.css
@@ -24,7 +24,10 @@
   .buttonContainer {
     padding: var(--fds-spacing-4) 0;
     display: flex;
+    flex-direction: row-reverse; /* reversed for correct tab order */
+    justify-content: start;
     gap: var(--fds-spacing-4);
+    flex-wrap: wrap;
   }
 }
 
