--- a/src/app-components/Pagination/Pagination.module.css
+++ b/src/app-components/Pagination/Pagination.module.css
@@ -7,14 +7,10 @@
   }
 }
 .rowsPerPageDropdown {
+  width: var(--ds-size-22);
+}
+
+.rowsPerPageField {
   display: flex;
-  flex-direction: row-reverse;
-
-  div[class*='ds-combobox__input__wrapper'] {
-    width: 80px;
-  }
-
-  div[class*='ds-combobox__chip-and-input'] {
-    width: 34px;
-  }
+  gap: var(--ds-size-2);
 }
