--- a/src/features/instantiate/selection/InstanceSelection.module.css
+++ b/src/features/instantiate/selection/InstanceSelection.module.css
@@ -41,17 +41,15 @@ Altinn, and making sure they are consistent. */
   padding-top: 12px;
   padding-bottom: 12px;
 }
+
+.table tfoot td {
+  background-color: #f5f5f5;
+  border-top: none;
+}
 /* ==== */
 
 .table tr:hover {
   background-color: unset;
-}
-
-.tableFooter {
-  background-color: #f5f5f5; /* Remove this when upgrading to the new design system component look*/
-}
-tr.tableFooter:hover {
-  background-color: var(--ds-color-neutral-background-subtle);
 }
 
 .startNewButtonContainer {
