--- a/src/features/navigation/AppNavigation.module.css
+++ b/src/features/navigation/AppNavigation.module.css
@@ -43,7 +43,6 @@
 }
 
 .group-name-active {
-  color: var(--fds-colors-grey-800);
   text-decoration-line: underline;
   text-decoration-skip-ink: none;
   text-underline-offset: 3px;
@@ -88,16 +87,16 @@
   cursor: not-allowed;
 }
 
-/* Only use 2 columns if the button is not expandable */
-.group-button:not(:has(> :last-child:nth-child(3))) {
-  grid-template-columns: auto auto;
-}
-
 .group-button:hover:not(:disabled) {
   text-decoration: underline;
   text-decoration-skip-ink: none;
   text-underline-offset: 2px;
   text-decoration-thickness: 1px;
+}
+
+.group-button-single {
+  color: var(--fds-colors-blue-700);
+  grid-template-columns: auto auto;
 }
 
 .group-chevron {
@@ -124,6 +123,14 @@
   align-items: center;
 }
 
+.group-symbol-single {
+  font-size: 18px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin: 2px;
+}
+
 .group-symbol-error {
   color: var(--fds-colors-red-700);
   border-color: var(--fds-colors-red-500);
@@ -140,6 +147,11 @@
   color: var(--fds-colors-grey-100);
   border-color: var(--fds-colors-blue-900);
   background-color: var(--fds-colors-blue-900);
+}
+
+.group-symbol-active.group-symbol-single:not(.group-symbol-info) {
+  outline: 2px solid var(--fds-colors-grey-100);
+  outline-offset: -4px;
 }
 
 .group-symbol-default {
