--- a/src/app-components/Datepicker/Calendar.module.css
+++ b/src/app-components/Datepicker/Calendar.module.css
@@ -103,6 +103,11 @@
   gap: var(--ds-size-1);
   background: white;
 }
+
+.calendarInputWrapper button {
+  margin: 1px;
+}
+
 .calendarInputWrapper:hover {
   box-shadow: inset 0 0 0 1px var(--ds-color-accent-border-strong);
 }
@@ -115,6 +120,7 @@
   border: none;
   background: white;
 }
+
 .calendarInput input:not(:focus-visible):hover {
   box-shadow: none;
 }
