makes everything float to top, except media when position bottom. Also fixes video to cover card media slot

--- a/src/layout/Cards/Cards.module.css
+++ b/src/layout/Cards/Cards.module.css
@@ -2,8 +2,12 @@
   height: 100%;
 }
 
-.cardMedia {
-  height: 100%;
-  display: flex;
-  align-items: end;
+.cardMedia img,
+audio,
+video {
+  object-fit: cover;
+}
+
+.cardMedia:last-of-type {
+  margin-top: auto;
 }
