--- a/src/layout/Tabs/Tabs.module.css
+++ b/src/layout/Tabs/Tabs.module.css
@@ -1,5 +1,5 @@
 .tabContent {
-  background-color: white;
+  background-color: var(--ds-color-neutral-surface-default);
   display: flex;
   flex-direction: column;
   gap: var(--ds-size-6);
