no auto-hyphenation

--- a/src/features/navigation/components/SubformsForPage.module.css
+++ b/src/features/navigation/components/SubformsForPage.module.css
@@ -18,8 +18,7 @@
   text-align: left;
 
   border-radius: var(--fds-border_radius-interactive);
-  hyphens: auto;
-  overflow-wrap: anywhere; /* Capitalized words will not get hyphenated for some reason, so this is needed as a fallback */
+  overflow-wrap: anywhere;
   padding: 2px 6px;
   margin: -2px -6px -2px -2px;
 }
@@ -67,8 +66,7 @@
   text-align: left;
 
   border-radius: var(--fds-border_radius-interactive);
-  hyphens: auto;
-  overflow-wrap: anywhere; /* Capitalized words will not get hyphenated for some reason, so this is needed as a fallback */
+  overflow-wrap: anywhere;
   padding: 2px 6px;
   margin: -2px -6px -2px -2px;
 }
