move logo in pdf above title, adjust logo sizes, always show app owner above app title

--- a/src/components/presentation/OrganisationLogo/OrganisationLogo.module.css
+++ b/src/components/presentation/OrganisationLogo/OrganisationLogo.module.css
@@ -10,15 +10,21 @@
 }
 
 .medium {
-  height: 50px;
+  height: 56px;
 }
 
 .large {
-  height: 50px;
+  height: 72px;
 }
 
 @media only screen and (min-width: 576px) {
   .large {
-    height: 123px;
+    height: 120px;
+  }
+}
+
+@media print {
+  .large {
+    height: 104px;
   }
 }
