--- a/src/components/form/MessageBanner.module.css
+++ b/src/components/form/MessageBanner.module.css
@@ -7,9 +7,9 @@
 }
 
 .default {
-  background-color: var(--colors-grey-200);
+  background-color: var(--fds-colors-grey-200);
 }
 
 .error {
-  background-color: var(--colors-red-200);
+  background-color: var(--fds-colors-red-200);
 }
