--- a/src/features/instantiate/containers/PartySelection.module.css
+++ b/src/features/instantiate/containers/PartySelection.module.css
@@ -23,12 +23,26 @@
   }
 }
 
+.padding {
+  padding-right: 12px;
+  padding-left: 12px;
+}
+
+.subTitleContainer {
+  padding-top: 24px;
+  padding-bottom: 12px;
+}
+
+.subTitleContainer div {
+  align-content: center;
+}
+
 .subTitle {
   font-size: 1.093rem;
   font-weight: 600;
-  padding: 24px 12px 18px;
 }
 
-.checkbox {
-  padding: 24px 12px 12px;
+.checkboxContainer {
+  align-items: center;
+  gap: 12px;
 }
