--- a/src/components/presentation/AppHeader/AppHeaderMenu.module.css
+++ b/src/components/presentation/AppHeader/AppHeaderMenu.module.css
@@ -1,3 +1,8 @@
+.partyName {
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
 .button-active {
   background-color: var(--fds-semantic-surface-action-first-no_fill-active);
   color: var(--fds-semantic-text-action-first-active);
