--- a/src/components/molecules/AltinnSubstatus.module.css
+++ b/src/components/molecules/AltinnSubstatus.module.css
@@ -1,4 +1,4 @@
-.paper {
+.container {
   background: var(--colors-primary-white);
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0;
