--- a/src/components/message/ErrorReport.module.css
+++ b/src/components/message/ErrorReport.module.css
@@ -1,15 +1,11 @@
-.errorList {
-  list-style-position: outside;
-  margin: 0 0 0 24px;
-  padding: 0;
+.errorSummary {
+  padding: var(--ds-size-4) var(--modal-padding-x);
 }
 
-.errorList li {
-  margin-bottom: 8px;
-}
 .errorList span {
   font-size: 1rem;
 }
+
 .errorList button {
   text-align: left;
   border-bottom: 2px solid transparent;
