--- a/src/layout/Map/MapComponent.module.css
+++ b/src/layout/Map/MapComponent.module.css
@@ -39,11 +39,18 @@
 
 /* In PDF we should show attribution with hyperlinks printed out */
 @media print {
+  .map {
+    /*
+    * Workaround, tool-tips become off-center due to font-size reduction in PDF @see shared.css
+    * If we get rid of that, this is no longer needed.
+    */
+    font-size: 12px !important;
+  }
   .map div:has(> :global(.leaflet-control-attribution)) {
     width: 100%;
   }
   .map :global(.leaflet-control-attribution) {
-    background: white;
+    background: white !important;
     width: 100%;
     padding: 0;
     text-align: center;
