--- a/src/components/AltinnCollapsable.module.css
+++ b/src/components/AltinnCollapsable.module.css
@@ -1,6 +1,7 @@
 .collapsable {
   overflow: hidden;
   transition:
+    visibility 0.3s ease-in-out,
     max-height 0.3s ease-in-out,
     opacity 0.2s ease-in-out;
   will-change: max-height;
@@ -12,6 +13,7 @@
 }
 
 .collapsableClosed {
+  visibility: hidden;
   max-height: 0;
   padding-top: 0;
   padding-bottom: 0;
