Fixing styling to fill out the entire available form width, shrink the SSN field if we have to (i.e. when inside a grid, so that two can be side-by-side).

--- a/src/layout/OrganisationLookup/OrganisationLookupComponent.module.css
+++ b/src/layout/OrganisationLookup/OrganisationLookupComponent.module.css
@@ -16,7 +16,7 @@
 /* breakpoints-md */
 @media only screen and (min-width: 840px) {
   .componentWrapper {
-    grid-template-columns: minmax(250px, 250px) auto;
+    grid-template-columns: auto min-content;
     grid-template-rows: repeat(4, min-content);
     grid-template-areas:
       'orgnrLabel .'
