--- a/src/features/navigation/components/PageGroup.module.css
+++ b/src/features/navigation/components/PageGroup.module.css
@@ -16,7 +16,7 @@
   font-family: var(--font-family);
   font-size: 16px;
   font-weight: normal;
-  color: var(--ds-color-neutral-8);
+  color: var(--ds-color-neutral-text-default);
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -47,14 +47,14 @@
 }
 
 .group-button-single {
-  color: var(--ds-global-blue-7);
+  color: var(--ds-color-accent-text-subtle);
   grid-template-columns: auto auto;
 }
 
 .group-chevron {
   margin-top: 6px;
   margin-right: -4px; /* The icon has some internal padding, this makes the edge line up better */
-  color: var(--ds-color-neutral-7);
+  color: var(--ds-color-neutral-text-default);
   font-size: 16px;
 }
 
@@ -84,32 +84,32 @@
 }
 
 .group-symbol-error {
-  color: var(--ds-global-red-7);
-  border-color: var(--ds-global-red-5);
-  background-color: var(--ds-global-red-1);
+  color: var(--ds-color-danger-text-default);
+  border-color: var(--ds-color-danger-border-default);
+  background-color: var(--ds-color-danger-surface-tinted);
 }
 
 .group-symbol-complete {
-  color: var(--ds-color-neutral-1);
-  border-color: var(--ds-global-blue-7);
-  background-color: var(--ds-global-blue-7);
+  color: var(--ds-color-neutral-background-tinted);
+  border-color: var(--ds-color-accent-base-default);
+  background-color: var(--ds-color-accent-base-default);
 }
 
 .group-symbol-active {
-  color: var(--ds-color-neutral-1);
-  border-color: var(--ds-global-blue-9);
-  background-color: var(--ds-global-blue-9);
+  color: var(--ds-color-neutral-background-tinted);
+  border-color: var(--ds-color-accent-base-active);
+  background-color: var(--ds-color-accent-base-active);
 }
 
 .group-symbol-active.group-symbol-single:not(.group-symbol-info) {
-  outline: 2px solid var(--ds-color-neutral-1);
+  outline: 2px solid var(--ds-color-neutral-background-tinted);
   outline-offset: -4px;
 }
 
 .group-symbol-default {
-  color: var(--ds-global-blue-9);
-  border-color: var(--ds-global-blue-4);
-  background-color: var(--ds-color-neutral-1);
+  color: var(--ds-color-accent-text-default);
+  border-color: var(--ds-color-accent-border-default);
+  background-color: var(--ds-color-neutral-surface-tinted);
 }
 
 .page-list {
@@ -123,7 +123,7 @@
   position: absolute;
   box-sizing: border-box;
   width: 0;
-  border-left: 2px solid var(--ds-color-neutral-7);
+  border-left: 2px solid var(--ds-color-neutral-base-default);
   height: calc(100% - 21px);
   top: 33px;
   left: 15px;
