--- a/src/features/navigation/components/SubformsForPage.module.css
+++ b/src/features/navigation/components/SubformsForPage.module.css
@@ -33,7 +33,7 @@
 .subform-expand-chevron {
   margin-top: 1px;
   margin-right: -4px; /* The icon has some internal padding, this makes the edge line up better */
-  color: var(--ds-color-neutral-7);
+  color: var(--ds-color-neutral-text-subtle);
   font-size: 16px;
 }
 
