--- a/src/features/navigation/components/TaskGroup.module.css
+++ b/src/features/navigation/components/TaskGroup.module.css
@@ -44,8 +44,8 @@
 }
 
 .task-symbol-locked {
-  color: var(--ds-color-neutral-8);
-  border-color: var(--ds-color-neutral-6);
+  color: var(--ds-color-neutral-text-default);
+  border-color: var(--ds-color-neutral-border-default);
   background-color: var(--ds-color-neutral-surface-tinted);
 }
 
