fix styling of readonly legends

--- a/src/app-components/Label/Label.module.css
+++ b/src/app-components/Label/Label.module.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+.legend {
+  display: inline-flex;
+}
+
 .labelAndDescWrapper {
   display: flex;
   flex-direction: column;
