handle description for options in dropdown

--- a/src/layout/Dropdown/DropdownComponent.module.css
+++ b/src/layout/Dropdown/DropdownComponent.module.css
@@ -3,3 +3,8 @@
   border-color: var(--ds-color-neutral-border-subtle);
   color: var(--ds-color-neutral-text-default);
 }
+
+.optionContent {
+  display: flex;
+  flex-direction: column;
+}
